# OpenGLExperiments

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: def_color.frag  def_color.vert  def_texture.frag  def_texture.vert  default.frag  default.vert  line_color.vert
src/: callbacks.h  camera.h  crt_debug.h  loader.h  main.cpp
src/.test/: lesson3.h  lesson7.h
src/Resources/: VertexArraysObject.cpp  VertexArraysObject.h  gl_res.h  object.cpp  object.h  res_manager.cpp  res_manager.h  shader_program.cpp  shader_program.h  texture2D.cpp  texture2D.h
